# contextual-speech-correction

./: LICENSE  README.md
contextual_speech_correction/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
contextual_speech_correction/scripts/: init_ros.py
contextual_speech_correction/scripts/it/: cfg2cnf.py  correct.py  costfunc.py  cyk.py  getgrammar.py  grammar.py  grammar.txt
